...
                android:textSize="20dp"
                android:textColor="#009688" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameEditText"
                android:hint=""
                android:textSize="20dp"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:layout_centerHorizontal="true"
                android:inputType="textCapWords"
...
                android:textSize="20dp"
                android:textColor="#009688" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phoneEditText"
                android:hint=""
                android:textSize="20dp"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:inputType="phone"
                android:textColorHighlight="#fb00ff"
...
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View History"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/viewHostHistoryButton"
                 />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/editUserDetailsToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textOn="Done"
            android:textOff="Update information"
            android:layout_gravity="center_horizontal" />
...
